[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = "1.0.188"
uuid = "1.4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
cargo-expand = "1.0.72"
reqwest = "0.11.22"
